# CTC-41

./: README.md
Lab 1/: VcompLabAluno.bash  killbuild  tm  (+3 more)
Lab1/: CMakeLists.txt  LabGengenZipProf  LabGengenZipProf~  VcompLabProf.bash  compLabAluno.bash~  compLabProf.bash  compare_diffs.py
Lab1/TinyFlex/: tiny.l
Lab1/TinyGeracaoCodigo/: globals.h  readme.txt  symtab.c  tiny.l  tiny.y  util.c
Lab1/alunodetail/: array_access_test_code_lex.diff  array_access_test_code_lex.txt  assign_test_code_lex.diff  assign_test_code_lex.txt  branch_test_code_lex.diff  branch_test_code_lex.txt  function_call_test_code_lex.diff  function_call_test_code_lex.txt  invalid_ch_lex.diff  invalid_ch_lex.txt  invalid_id_lex.diff  invalid_id_lex.txt  mdc_err.diff  mdc_err.txt  mdc_lex.diff  mdc_lex.txt  missing_comma_lex.diff  missing_comma_lex.txt  missing_key_lex.diff  missing_key_lex.txt  missing_key_semicolon_lex.diff  missing_key_semicolon_lex.txt  missing_parentheses_lex.diff  missing_parentheses_lex.txt  missing_semicolon_lex.diff  missing_semicolon_lex.txt  ser1_variable_not_declared_lex.diff  ser1_variable_not_declared_lex.txt  ser2_invalid_void_assignment_lex.diff  ser2_invalid_void_assignment_lex.txt  ser3_invalid_decl_void_variable_lex.diff  ser3_invalid_decl_void_variable_lex.txt  ser4_variable_already_declared_lex.diff  ser4_variable_already_declared_lex.txt  ser5_function_not_declared_lex.diff  ser5_function_not_declared_lex.txt  ser6_main_undefined_lex.diff  ser6_main_undefined_lex.txt  ser7_variable_name_used_for_function_lex.diff  ser7_variable_name_used_for_function_lex.txt  (+12 more)
Lab1/alunoout/: array_access_test_code.out  assign_test_code.out  branch_test_code.out  function_call_test_code.out  invalid_ch.out  invalid_id.out  mdc.out  missing_comma.out  missing_key.out  missing_key_semicolon.out  missing_parentheses.out  missing_semicolon.out  ser1_variable_not_declared.out  ser2_invalid_void_assignment.out  ser3_invalid_decl_void_variable.out  ser4_variable_already_declared.out  ser5_function_not_declared.out  ser6_main_undefined.out  ser7_variable_name_used_for_function.out  ser8_empty_return.out  sort.out  sort_badchar.out
Lab1/detail/: array_access_test_code_gen.tm  array_access_test_code_syn.txt  array_access_test_code_tab.txt  assign_test_code_gen.tm  assign_test_code_syn.txt  branch_test_code_syn.txt  branch_test_code_tab.txt  function_call_test_code_syn.txt  invalid_ch_err.txt  invalid_id_err.txt  invalid_id_lex.txt  mdc_syn.txt  mdc_tab.txt  missing_key_err.txt  missing_key_lex.txt  missing_semicolon_err.txt  ser1_variable_not_declared_err.txt  ser3_invalid_decl_void_variable_tab.txt  ser4_variable_already_declared_syn.txt  ser4_variable_already_declared_tab.txt  ser5_function_not_declared_err.txt  ser5_function_not_declared_lex.txt  ser8_empty_return_tab.txt  sort_badchar_lex.txt  sort_gen.tm  sort_syn.txt
Lab1/detailonlylex/: assign_test_code_lex.txt  branch_test_code_lex.txt  invalid_ch_err.txt  invalid_ch_lex.txt  mdc_lex.txt  missing_comma_lex.txt  missing_key_semicolon_lex.txt  missing_parentheses_lex.txt  ser1_variable_not_declared_lex.txt  sort_badchar_lex.txt
Lab1/example/: array_access_test_code.cm  mdc.cm  missing_comma.cm  missing_key.cm  ser1_variable_not_declared.cm  ser2_invalid_void_assignment.cm  ser3_invalid_decl_void_variable.cm  ser7_variable_name_used_for_function.cm
Lab1/lib/: log.c
Lab1/lib/dox/html/: globals_eval.html  globals_vars.html  graph_legend.html  index.html  log_8c.html  log_8h.html  log_8h__dep__incl.md5  log_8h_a0ba66d28f34aadc7b447856f180dec55_cgraph.map  log_8h_source.html  menudata.js
Lab1/lib/dox/html/search/: all_2.js  all_3.js  all_4.js  all_8.js  enumvalues_3.js  enumvalues_4.js  functions_0.js  functions_3.js  functions_5.js
Lab1/lib/dox/latex/: log_8c__incl.md5  log_8h__dep__incl.md5  refman.idx  refman.ilg  refman.ind  refman.tex  refman.toc
Lab1/output/: array_access_test_code.out  invalid_id.out  missing_key_semicolon.out  missing_parentheses.out  missing_semicolon.out  ser4_variable_already_declared.out  ser5_function_not_declared.out  ser6_main_undefined.out  sort_badchar.out
Lab1/scripts/: runcmcomp
Lab1/src/: cminus.l  globals.h  main.c  util.c
(+123 files in other folders)
